observability/02-loki.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: observability
  name: loki
spec:
  selector:
    matchLabels:
      app: loki
  replicas: 1
  template:
    metadata:
      labels:
        app: loki
    spec:
      containers:
      - name: loki
        image: grafana/loki:2.8.2
        args:
          - '-config.file=/etc/loki/config.yaml'
        ports:
        - name: loki-1
          containerPort: 3100
        - name: loki-2
          containerPort: 7946
        - name: loki-3
          containerPort: 9095
        volumeMounts:
        - name: loki-config
          mountPath: /etc/loki/config.yaml
          subPath: config.yaml
      volumes:
      - name: loki-config
        configMap:
          defaultMode: 420
          name: loki
---
apiVersion: v1
kind: Service
metadata:
  namespace: observability
  name: loki
spec:
  selector:
    app: loki
  ports:
  - protocol: TCP
    port: 3100
    targetPort: 3100
    name: loki-1
  - protocol: TCP
    port: 7946
    targetPort: 7946
    name: loki-2
  - protocol: TCP
    port: 9095
    targetPort: 9095
    name: loki-3
