observability/02-prometheus.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: observability
  name: prometheus
spec:
  selector:
    matchLabels:
      app: prometheus
  replicas: 1
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
      - name: prometheus
        image: prom/prometheus
        args:
          - "--config.file=/etc/prometheus.yaml"
          - "--web.enable-remote-write-receiver"
          - "--enable-feature=exemplar-storage"
        ports:
        - name: prometheus
          containerPort: 9090
        volumeMounts:
        - name: config
          mountPath: /etc/prometheus.yaml
          subPath: prometheus.yaml
      volumes:
      - name: config
        configMap:
          defaultMode: 420
          name: prometheus
---
apiVersion: v1
kind: Service
metadata:
  namespace: observability
  name: prometheus
spec:
  selector:
    app: prometheus
  ports:
  - protocol: TCP
    port: 9090
    targetPort: 9090
    name: prometheus
