observability/05-tempo.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: observability
  name: tempo
spec:
  selector:
    matchLabels:
      app: tempo
  replicas: 1
  template:
    metadata:
      labels:
        app: tempo
    spec:
      containers:
      - name: tempo
        image: grafana/tempo
        args:
          - --config.file=/etc/tempo.yaml
        ports:
        - name: jaeger
          containerPort: 14268
        - name: tempo
          containerPort: 3200
        volumeMounts:
        - name: config
          mountPath: /etc/tempo.yaml
          subPath: tempo.yaml
      volumes:
      - name: config
        configMap:
          defaultMode: 420
          name: tempo
---
apiVersion: v1
kind: Service
metadata:
  namespace: observability
  name: tempo
spec:
  selector:
    app: tempo
  ports:
  - protocol: TCP
    port: 14268
    targetPort: 14268
    name: jaeger
  - protocol: TCP
    port: 3200
    targetPort: 3200
    name: tempo
