observability/07-opentelemetry.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: observability
  name: opentelemetry
spec:
  selector:
    matchLabels:
      app: opentelemetry
  replicas: 1
  template:
    metadata:
      labels:
        app: opentelemetry
    spec:
      containers:
      - name: opentelemetry
        image: otel/opentelemetry-collector-contrib
        args:
          - '--config=/etc/otel-col.yaml'
        ports:
        - name: grpc
          containerPort: 4317
        - name: http
          containerPort: 4318
        volumeMounts:
        - name: config
          mountPath: /etc/otel-col.yaml
          subPath: otel-col.yaml
      volumes:
      - name: config
        configMap:
          defaultMode: 420
          name: opentelemetry
---
apiVersion: v1
kind: Service
metadata:
  namespace: observability
  name: opentelemetry
spec:
  selector:
    app: opentelemetry
  ports:
    - protocol: TCP
      port: 4317
      targetPort: 4317
      name: grpc
    - protocol: TCP
      port: 4318
      targetPort: 4318
      name: http
